...
                    .padding(
                        8.dp,
                        0.dp,
                        0.dp,
                        0.dp
                    )
                    .testTag("SearchField"),
                value = searchText,
                onValueChange = search,
                keyboardOptions = KeyboardOptions(
                    imeAction = ImeAction.Search
                ),
                keyboardActions = KeyboardActions(
...
                ),
                textStyle = MaterialTheme.typography.subtitle1.copy(MaterialTheme.colors.onBackground)
            )

            IconButton(
                modifier = Modifier
                    .testTag("ClearSearch"),
                onClick = {
                    resetSearch()

                    focusManager.clearFocus(true)
                    keyboardController?.hide()
                }
...
