...
            )
        }

        Column {
            IconButton(
                modifier = Modifier
                    .testTag("More"),
                onClick = {
                    menuExpanded = true
                }
            ) {
                Icon(
                    imageVector = Icons.Default.MoreVert,
...
                onDismissRequest = {
                    menuExpanded = false
                },
            ) {
                DropdownMenuItem(
                    modifier = Modifier
                        .testTag("DeleteMenuItem"),
                    onClick = {
                        deleteAccount()

                        menuExpanded = false
                    },
                    contentPadding = PaddingValues(
...
